--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "next": "^13.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@capacitor/cli": "^5.0.5"
   }
 }
