--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,7 +1,7 @@
 {
   "appId": "com.example.app",
   "appName": "moviedb-prototype",
-  "webDir": "public",
+  "webDir": "dist",
   "server": {
     "androidScheme": "https"
   }
